...
    if (phoneNumber) {
      Linking.openURL(`tel:${phoneNumber}`).catch(err => console.error('Error calling:', err));
    }
  };

  return (
    <View testID="restaurant-detail-screen" accessibilityLabel="restaurant-detail-screen" style={styles.container}>
      <StatusBar barStyle="light-content" backgroundColor="transparent" translucent />
      
      <ImageBackground
        source={{ uri: image }}
        style={styles.headerImage}
      >
...
