...
    []
  )

  return (
    <div
      ref={scrollerRef}
      data-testid="restaurants-map-horizontal-list"
      onScroll={handleScroll}
      style={{
        display: 'flex',
        flexDirection: 'row',
        overflowX: 'auto',
        overflowY: 'hidden',
...
