appId: com.goodfoods.demo
name: Offers + Wallet screenshots
---
- tapOn: "My Account"
- waitForAnimationToEnd
- tapOn:
    text: "Open menu"
- waitForAnimationToEnd
- takeScreenshot: 12-drawer
- tapOn: "Offers & Discounts"
- waitForAnimationToEnd
- takeScreenshot: 13-offers
- tapOn:
    text: "Open menu"
- waitForAnimationToEnd
- tapOn: "Wallet"
- waitForAnimationToEnd
- takeScreenshot: 14-wallet
